--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,8 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "psycopg2-binary (>=2.9.11,<3.0.0)"
+    "psycopg2-binary (>=2.9.11,<3.0.0)",
+    "pyspark (==3.5.7)",
 ]
 
 
@@ -18,5 +19,6 @@ build-backend = "poetry.core.masonry.api"
 
 [dependency-groups]
 dev = [
-    "faker (>=40.1.0,<41.0.0)"
+    "faker (>=40.1.0,<41.0.0)",
+    "boto3 (>=1.42.24,<2.0.0)"
 ]
