--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ requires-python = ">=3.12"
 dependencies = [
     "psycopg2-binary (>=2.9.11,<3.0.0)",
     "pyspark (==3.5.7)",
+    "dbt-core (>=1.11.2,<2.0.0)",
+    "dbt-duckdb (>=1.10.0,<2.0.0)",
+    "duckdb (>=1.4.4,<2.0.0)",
 ]
 
 
